complete initial phase
